--- a/first/index.html
+++ b/first/index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
@@ -11,7 +8,7 @@
 
 <body>
 
-    <nav class="NavBar">
+    <nav class="navBar">
 
         <p><span>BR</span> Architect</p>
         <ol>
@@ -21,64 +18,73 @@
         </ol>
     </nav>
 
-    <header id="Header">
+    <header class="header">
 
-        <img src="./assets/images/5.jpg" alt="">
-        <p class="Text-Photo"><span>BR</span> Architect</p>
-        <p class="mobile-apper"><span> Br</span></p>
+        <img src="./assets/images/5.jpg" 
+            alt="">
+        <p class="textPhoto"><span>BR</span> Architect</p>
+        <p class="mobileApper"><span> Br</span></p>
     </header>
 
-    <section class="Projectsheder">
+    <section class="projectsHeder">
         <p>Projects</p>
 
-        <div class="ProjectsList">
+        <div class="projectsList">
 
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/1.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/1.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/2.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/2.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/3.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/3.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/4.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/4.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/6.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/6.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/7.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/7.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/8.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/8.jpg" 
+                    alt="">
                 </div>
             </div>
             <div class="project">
                 <p>summer house</p>
-                <div class="ProjectImage">
-                    <img src="./assets/images/9.jpg" alt="">
+                <div class="projectImage">
+                    <img src="./assets/images/9.jpg" 
+                    alt="">
                 </div>
             </div>
 
@@ -87,8 +93,8 @@
 
     </section>
 
-    <section class="About">
-        <p class="AboutHeader">About</p>
+    <section class="about">
+        <p class="aboutHeader">About</p>
         <p> Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Rerum vero amet accusantium repellendus,
             facilis laudantium deleniti accusamus consequatur aspernatur
@@ -98,48 +104,52 @@
             vel iusto vero facilis nulla dolores voluptatibus.
         </p>
 
-        <div class="AboutList">
-            <div class="AboutListElement">
-                <img src="./assets/images/6.jpg" alt="">
-                <p class="AboutListElementName">John Doe</p>
-                <p class="AboutListElementPosition">CEO & Founder</p>
-                <p class="AboutListElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
+        <div class="aboutList">
+            <div class="aboutListElement">
+                <img src="./assets/images/6.jpg" 
+                alt="">
+                <p class="aboutListelEmentName">John Doe</p>
+                <p class="aboutListElementPosition">CEO & Founder</p>
+                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
                 necessitatibus tempora magni </p>
-                <div class="AboutListElementButton">Contact</div>
+                <div class="aboutListElementButton">Contact</div>
             </div>
-            <div class="AboutListElement">
-                <img src="./assets/images/6.jpg" alt="">
-                <p class="AboutListElementName">John Doe</p>
-                <p class="AboutListElementPosition">CEO & Founder</p>
-                <p class="AboutListElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
+            <div class="aboutListElement">
+                <img src="./assets/images/6.jpg" 
+                alt="">
+                <p class="aboutListelEmentName">John Doe</p>
+                <p class="aboutListElementPosition">CEO & Founder</p>
+                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
                 necessitatibus tempora magni </p>
-                <div class="AboutListElementButton">Contact</div>
+                <div class="aboutListElementButton">Contact</div>
             </div>
-            <div class="AboutListElement">
-                <img src="./assets/images/6.jpg" alt="">
-                <p class="AboutListElementName">John Doe</p>
-                <p class="AboutListElementPosition">CEO & Founder</p>
-                <p class="AboutListElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
+            <div class="aboutListElement">
+                <img src="./assets/images/6.jpg" 
+                alt="">
+                <p class="aboutListelEmentName">John Doe</p>
+                <p class="aboutListElementPosition">CEO & Founder</p>
+                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
                 necessitatibus tempora magni </p>
-                <div class="AboutListElementButton">Contact</div>
+                <div class="aboutListElementButton">Contact</div>
             </div>
-            <div class="AboutListElement">
-                <img src="./assets/images/6.jpg" alt="">
-                <p class="AboutListElementName">John Doe</p>
-                <p class="AboutListElementPosition">CEO & Founder</p>
-                <p class="AboutListElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
+            <div class="aboutListElement">
+                <img src="./assets/images/6.jpg" 
+                alt="">
+                <p class="aboutListelEmentName">John Doe</p>
+                <p class="aboutListElementPosition">CEO & Founder</p>
+                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
                 necessitatibus tempora magni </p>
-                <div class="AboutListElementButton">Contact</div>
+                <div class="aboutListElementButton">Contact</div>
             </div>
 
         </div>
         
     </section>
 
-    <footer class="Contact">
-        <p class="ContactTitle">Contact</p>
-        <p class="contact-paragraph">lets get in tough and talk about your next project</p>
-        <div class="ContactList">
+    <footer class="contact">
+        <p class="contacTtitle">Contact</p>
+        <p class="contactParagraph">lets get in tough and talk about your next project</p>
+        <div class="contactList">
             <input type="text" placeholder="Name">
             <input type="text" placeholder="Email">
             <input type="text" placeholder="Subjec">
