--- a/first/index.html
+++ b/first/index.html
@@ -1,165 +1,198 @@
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
-    <title>Document</title>
-</head>
-
-<body>
-
-    <nav class="navBar">
-
-        <p><span>BR</span> Architect</p>
-        <ol>
-            <li><a href="#"> Project</a></li>
-            <li><a href="#"> About</a></li>
-            <li><a href="#"> Contact</a></li>
-        </ol>
-    </nav>
-
-    <header class="header">
-
-        <img src="./assets/images/5.jpg" 
-            alt="">
-        <p class="textPhoto"><span>BR</span> Architect</p>
-        <p class="mobileApper"><span> Br</span></p>
-    </header>
-
-    <section class="projectsHeder">
-        <p>Projects</p>
-
-        <div class="projectsList">
-
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/1.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/2.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/3.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/4.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/6.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/7.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/8.jpg" 
-                    alt="">
-                </div>
-            </div>
-            <div class="project">
-                <p>summer house</p>
-                <div class="projectImage">
-                    <img src="./assets/images/9.jpg" 
-                    alt="">
-                </div>
-            </div>
-
-
-        </div>
-
-    </section>
-
-    <section class="about">
-        <p class="aboutHeader">About</p>
-        <p> Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Rerum vero amet accusantium repellendus,
-            facilis laudantium deleniti accusamus consequatur aspernatur
-            voluptatem harum. Non ut qui nemo quo,
-            laudantium eligendi quod aspernatur Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
-            modi non. Recusandae illo totam provident hic voluptatum illum porro, soluta nostrum inventore perferendis
-            vel iusto vero facilis nulla dolores voluptatibus.
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" 
+            content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" 
+            href="style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <nav class="navBar">
+            <p><span>BR</span> Architect</p>
+            <ol>
+                <li><a href="#projectsHeader"> Project</a></li>
+                <li><a href="#about"> About</a></li>
+                <li><a href="#contact"> Contact</a></li>
+            </ol>
+        </nav>
+        <header class="header">
+            <p class="textPhoto">
+                <span>BR</span> Architect
+            </p>
+            <p class="mobileApper">
+                <span> Br</span>
         </p>
-
-        <div class="aboutList">
-            <div class="aboutListElement">
-                <img src="./assets/images/6.jpg" 
-                alt="">
-                <p class="aboutListelEmentName">John Doe</p>
-                <p class="aboutListElementPosition">CEO & Founder</p>
-                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
-                necessitatibus tempora magni </p>
-                <div class="aboutListElementButton">Contact</div>
+        </header>
+        <section id="projectsHeader">
+            <p>Projects</p>
+            <div class="projectsList">
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/1.jpg" 
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/2.jpg" 
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/3.jpg" 
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/4.jpg"
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/6.jpg"  
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/7.jpg" 
+                            alt="photo"/>
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/8.jpg" 
+                            alt="photo"  />
+                    </div>
+                </div>
+                <div class="project">
+                    <p>summer house</p>
+                    <div>
+                        <img src="./assets/images/9.jpg" 
+                            alt="photo"/>
+                    </div>
+                </div>
             </div>
-            <div class="aboutListElement">
-                <img src="./assets/images/6.jpg" 
-                alt="">
-                <p class="aboutListelEmentName">John Doe</p>
-                <p class="aboutListElementPosition">CEO & Founder</p>
-                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
-                necessitatibus tempora magni </p>
-                <div class="aboutListElementButton">Contact</div>
+        </section>
+        <section id="about">
+            <p class="aboutHeader">
+                About
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+                vero amet
+                accusantium repellendus, facilis laudantium deleniti accusamus
+                consequatur aspernatur voluptatem harum. Non ut qui nemo quo,
+                laudantium
+                eligendi quod aspernatur Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Consequuntur, modi non. Recusandae illo totam
+                provident hic volupatum illum porro, soluta nostrum inventore
+                perferendis vel iusto vero facilis nulla dolores voluptatibus.
+            </p>
+            <div class="aboutList">
+                <div class="aboutListElement">
+                    <img src="./assets/images/6.jpg" 
+                    alt="photo"/>
+                    <p class="aboutListelEmentName">
+                        John Doe
+                    </p>
+                    <p class="aboutListElementPosition">
+                        CEO & Founder
+                    </p>
+                    <p class="aboutlistElementParagraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Possimus
+                        repudiandae sint est dolore necessitatibus tempora magni
+                    </p>
+                    <div class="aboutListElementButton">
+                        Contact
+                    </div>
+                </div>
+                <div class="aboutListElement">
+                    <img src="./assets/images/6.jpg" 
+                        alt="photo" />
+                    <p class="aboutListelEmentName">
+                        John Doe
+                    </p>
+                    <p class="aboutListElementPosition">
+                        CEO & Founder
+                    </p>
+                    <p class="aboutlistElementParagraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Possimus
+                        repudiandae sint est dolore necessitatibus tempora magni
+                    </p>
+                    <div class="aboutListElementButton">
+                        Contact
+                    </div>
+                </div>
+                <div class="aboutListElement">
+                    <img src="./assets/images/6.jpg" 
+                        alt="photo"/>
+                    <p class="aboutListelEmentName">
+                        John Doe
+                    </p>
+                    <p class="aboutListElementPosition">
+                        CEO & Founder
+                    </p>
+                    <p class="aboutlistElementParagraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Possimus
+                        repudiandae sint est dolore necessitatibus tempora magni
+                    </p>
+                    <div class="aboutListElementButton">
+                        Contact
+                    </div>
+                </div>
+                <div class="aboutListElement">
+                    <img src="./assets/images/6.jpg" 
+                        alt="photo" />
+                    <p class="aboutListelEmentName">
+                        John Doe
+                    </p>
+                    <p class="aboutListElementPosition">
+                        CEO & Founder
+                    </p>
+                    <p class="aboutlistElementParagraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Possimus
+                        repudiandae sint est dolore necessitatibus tempora magni
+                    </p>
+                    <div class="aboutListElementButton">
+                        Contact
+                    </div>
+                </div>
             </div>
-            <div class="aboutListElement">
-                <img src="./assets/images/6.jpg" 
-                alt="">
-                <p class="aboutListelEmentName">John Doe</p>
-                <p class="aboutListElementPosition">CEO & Founder</p>
-                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
-                necessitatibus tempora magni </p>
-                <div class="aboutListElementButton">Contact</div>
+        </section>
+        <footer id="contact">
+            <p class="contacTtitle">
+                Contact
+            </p>
+            <p class="contactParagraph">
+                lets get in tough and talk about your next project
+            </p>
+            <div class="contactList">
+                <input type="text"
+                        placeholder="Name" />
+                <input type="text"
+                        placeholder="Email" />
+                <input type="text" 
+                        placeholder="Subjec" />
+                <input type="text"
+                        placeholder="Comment" />
             </div>
-            <div class="aboutListElement">
-                <img src="./assets/images/6.jpg" 
-                alt="">
-                <p class="aboutListelEmentName">John Doe</p>
-                <p class="aboutListElementPosition">CEO & Founder</p>
-                <p class="aboutlistElementParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae sint est dolore
-                necessitatibus tempora magni </p>
-                <div class="aboutListElementButton">Contact</div>
-            </div>
-
-        </div>
-        
-    </section>
-
-    <footer class="contact">
-        <p class="contacTtitle">Contact</p>
-        <p class="contactParagraph">lets get in tough and talk about your next project</p>
-        <div class="contactList">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Email">
-            <input type="text" placeholder="Subjec">
-            <input type="text" placeholder="Comment">
-        </div>
-
-
-    </footer>
-
-
-</body>
-
+        </footer>
+    </body>
 </html>
