--- a/first/index.html
+++ b/first/index.html
@@ -3,17 +3,25 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" 
-            content="width=device-width, initial-scale=1.0" />
+              content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" 
-            href="style.css" />
+              href="style.css" />
         <title>Document</title>
     </head>
     <body>
         <nav class="navBar">
             <p><span>BR</span> Architect</p>
             <ol>
-                <li><a href="#projectsHeader"> Project</a></li>
-                <li><a href="#about"> About</a></li>
+                <li>
+                    <a href="#projectsHeader">
+                         Project
+                    </a>
+                </li>
+                <li>
+                    <a href="#about"> About
+
+                    </a>
+                </li>
                 <li><a href="#contact"> Contact</a></li>
             </ol>
         </nav>
@@ -25,68 +33,68 @@
                 <span> Br</span>
         </p>
         </header>
-        <section id="projectsHeader">
+        <section id="projectsHeader" class="projectsHeader">
             <p>Projects</p>
             <div class="projectsList">
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/1.jpg" 
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/2.jpg" 
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/3.jpg" 
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/4.jpg"
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/6.jpg"  
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/7.jpg" 
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/8.jpg" 
-                            alt="photo"  />
+                             alt="photo"  />
                     </div>
                 </div>
                 <div class="project">
                     <p>summer house</p>
                     <div>
                         <img src="./assets/images/9.jpg" 
-                            alt="photo"/>
+                             alt="photo"/>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="about">
+        <section id="about" class="about">
             <p class="aboutHeader">
                 About
             </p>
@@ -104,7 +112,7 @@
             <div class="aboutList">
                 <div class="aboutListElement">
                     <img src="./assets/images/6.jpg" 
-                    alt="photo"/>
+                         alt="photo"/>
                     <p class="aboutListelEmentName">
                         John Doe
                     </p>
@@ -122,7 +130,7 @@
                 </div>
                 <div class="aboutListElement">
                     <img src="./assets/images/6.jpg" 
-                        alt="photo" />
+                         alt="photo" />
                     <p class="aboutListelEmentName">
                         John Doe
                     </p>
@@ -140,7 +148,7 @@
                 </div>
                 <div class="aboutListElement">
                     <img src="./assets/images/6.jpg" 
-                        alt="photo"/>
+                         alt="photo"/>
                     <p class="aboutListelEmentName">
                         John Doe
                     </p>
@@ -158,7 +166,7 @@
                 </div>
                 <div class="aboutListElement">
                     <img src="./assets/images/6.jpg" 
-                        alt="photo" />
+                         alt="photo" />
                     <p class="aboutListelEmentName">
                         John Doe
                     </p>
@@ -176,7 +184,7 @@
                 </div>
             </div>
         </section>
-        <footer id="contact">
+        <footer id="contact" class="contact">
             <p class="contacTtitle">
                 Contact
             </p>
@@ -185,13 +193,13 @@
             </p>
             <div class="contactList">
                 <input type="text"
-                        placeholder="Name" />
+                       placeholder="Name" />
                 <input type="text"
-                        placeholder="Email" />
+                       placeholder="Email" />
                 <input type="text" 
-                        placeholder="Subjec" />
+                       placeholder="Subjec" />
                 <input type="text"
-                        placeholder="Comment" />
+                       placeholder="Comment" />
             </div>
         </footer>
     </body>
