--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </li>
         </ul>
     </nav>
-    <header>
-        <div>
+    <header class="header">
+        <div class="header__logo">
             <span>
                 BR
             </span>
@@ -43,44 +43,44 @@
     </header>
     <section id="project" 
              class="projectsMenu">
-            <p>Projects</p>
-            <div class="projectsList">
-                <div>
+            <p class="projectsMenu__projectsHeader">Projects</p>
+            <div class="projectsMenu__projectsList">
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/2.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/3.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/4.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/2.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/3.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/4.jpg" 
                          alt="summer house">
@@ -89,17 +89,17 @@
     </section>
     <section id="about" 
              class="aboutSection">
-        <p>
+        <p class="aboutSection__header">
             About
         </p>
-        <p class="explanation">
+        <p class="aboutSection__explanation">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Magnam odio cumque, maxime consectetur consequatur earum
             iste! Similique animi dolor, beatae delectus soluta 
             deleniti incidunt provident cumque fugiat doloremque quas odit Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad cupiditate ratione deserunt ipsa est mollitia laudantium nobis dignissimos iste officiis porro fugit repellat, commodi magni rem numquam minima, quasi exercitationem!
         </p>
-        <div class="aboutList ">
-            <div>
+        <div class="aboutSection__aboutList">
+            <div class="aboutSection__aboutList__element">
                 <img src="./assets/7.jpg" 
                      alt="Member">
                 <span class="name">
@@ -117,7 +117,7 @@
                     Contact
                 </button>
             </div>
-            <div>
+            <div class="aboutSection__aboutList__element">
                 <img src="./assets/8.jpg" 
                      alt="Member">
                 <span class="name">
@@ -135,7 +135,7 @@
                     Contact
                 </button>
             </div>
-            <div>
+            <div class="aboutSection__aboutList__element">
                 <img src="./assets/9.jpg" 
                      alt="Member">
                 <span class="name">
@@ -153,7 +153,7 @@
                     Contact
                 </button>
             </div>
-            <div>
+            <div class="aboutSection__aboutList__element">
                 <img src="./assets/7.jpg" 
                      alt="Member">
                 <span class="name">
@@ -175,13 +175,13 @@
     </section>
     <section id="contact" 
              class="contactSection">
-        <p class="contactHeader">
+        <p class="contactSection__header">
             Contact
         </p>
-        <p class="contactParagraph">
+        <p >
             lets get in touch and talk about youre next project
         </p>
-        <div>
+        <div class="contactSection__list">
             <input type="text" 
                    placeholder="Name">
             <input type="text" 
