--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
                 BR
             </span>
             <p>
-                Architects poempowemfpowemfpo
+                Architects
             </p>
         </div>
+        <img src="./assets/5.jpg" alt="">
     </header>
     <section id="project" 
              class="projectsMenu">
