--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 Architects
             </p>
         </div>
-        <img src="./assets/5.jpg" alt="">
+        <img src="./assets/5.jpg" 
+             alt="glass_permid"
+             class=".header__background"
+             >
     </header>
     <section id="project" 
              class="projectsMenu">
