--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                 Architects
             </p>
         </div>
-        <img src="./assets/5.jpg" 
-             alt="glass_permid"
-             class=".header__background"
-             >
+        <div class="header__background">
+            <img src="./assets/5.jpg" 
+            alt="glass_permid"
+            >
+        </div>
+        
     </header>
     <section id="project" 
              class="projectsMenu">
