--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </div>
        <div class="header__background">
-        <img src="/assets/5.jpg" 
+        <img src="./assets/5.jpg" 
         alt="glass_permid"
         >
        </div>
