--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
        <div class="header__background">
         <img src="./assets/5.jpg" 
              alt="glass_permid"
+             class="header__background__image"
         >
        </div>
            
