--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
             <div class="projectsMenu__projectsList">
                 <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
-                    <img src="./assets/1.jpg" 
+                    <img src="./sass/assets/1.jpg" 
                          alt="summer house">
                 </div>
                 <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
-                    <img src="./assets/2.jpg" 
+                    <img src="./sass/assets/2.jpg" 
                          alt="summer house">
                 </div>
                 <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
-                    <img src="./assets/3.jpg" 
-                         alt="summer house">
-                </div>
-                <div class="projectsMenu__projectsList__element">
-                        <p>Summer House</p>
-                        <img src="./assets/4.jpg" 
-                             alt="summer house">
-                </div>
-                <div class="projectsMenu__projectsList__element">
-                    <p>Summer House</p>
-                    <img src="./assets/1.jpg" 
+                    <img src="./sass/assets/3.jpg" 
                          alt="summer house">
                 </div>
                 <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
-                        <img src="./assets/2.jpg" 
-                             alt="summer house">
-                </div>
-                <div class="projectsMenu__projectsList__element">
-                        <p>Summer House</p>
-                        <img src="./assets/3.jpg" 
+                        <img src="./sass/assets/4.jpg" 
                              alt="summer house">
                 </div>
                 <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
-                    <img src="./assets/4.jpg" 
+                    <img src="./sass/assets/1.jpg" 
+                         alt="summer house">
+                </div>
+                <div class="projectsMenu__projectsList__element">
+                        <p>Summer House</p>
+                        <img src="./sass/assets/2.jpg" 
+                             alt="summer house">
+                </div>
+                <div class="projectsMenu__projectsList__element">
+                        <p>Summer House</p>
+                        <img src="./sass/assets/3.jpg" 
+                             alt="summer house">
+                </div>
+                <div class="projectsMenu__projectsList__element">
+                    <p>Summer House</p>
+                    <img src="./sass/assets/4.jpg" 
                          alt="summer house">
                 </div>
             </div>
@@ -100,7 +100,7 @@
         </p>
         <div class="aboutSection__aboutList">
             <div class="aboutSection__aboutList__element">
-                <img src="./assets/7.jpg" 
+                <img src="./sass/assets/7.jpg" 
                      alt="Member">
                 <span class="name">
                     John Doe
@@ -118,7 +118,7 @@
                 </button>
             </div>
             <div class="aboutSection__aboutList__element">
-                <img src="./assets/8.jpg" 
+                <img src="./sass/assets/8.jpg" 
                      alt="Member">
                 <span class="name">
                     John Doe
@@ -136,7 +136,7 @@
                 </button>
             </div>
             <div class="aboutSection__aboutList__element">
-                <img src="./assets/9.jpg" 
+                <img src="./sass/assets/9.jpg" 
                      alt="Member">
                 <span class="name">
                     John Doe
@@ -154,7 +154,7 @@
                 </button>
             </div>
             <div class="aboutSection__aboutList__element">
-                <img src="./assets/7.jpg" 
+                <img src="./sass/assets/7.jpg" 
                      alt="Member">
                 <span class="name">
                     John Doe
