--- a/index.html
+++ b/index.html
@@ -43,44 +43,47 @@
     </header>
     <section id="project" 
              class="projectsMenu">
-            <p>Projects</p>
-            <div class="projectsList">
-                <div>
+
+            <p class="projectsMenu__header">Projects</p>
+
+            <div class="projectsMenu__projectsList">
+
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/2.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/3.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/4.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/2.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                         <p>Summer House</p>
                         <img src="./assets/3.jpg" 
                              alt="summer house">
                 </div>
-                <div>
+                <div class="projectsMenu__projectsList__element">
                     <p>Summer House</p>
                     <img src="./assets/4.jpg" 
                          alt="summer house">
