fixed the bem naming mistakes

--- a/index.html
+++ b/index.html
@@ -44,43 +44,43 @@
     <section id="project" 
              class="projectsMenu">
             <p class="projectsMenu__projectsHeader">Projects</p>
-            <div class="projectsMenu__projectsList">
-                <div class="projectsMenu__projectsList__element">
+            <div class="projectsList">
+                <div class="projectsList__element">
                     <p>Summer House</p>
                     <img src="./sass/assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                     <p>Summer House</p>
                     <img src="./sass/assets/2.jpg" 
                          alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                     <p>Summer House</p>
                     <img src="./sass/assets/3.jpg" 
                          alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                         <p>Summer House</p>
                         <img src="./sass/assets/4.jpg" 
                              alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                     <p>Summer House</p>
                     <img src="./sass/assets/1.jpg" 
                          alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                         <p>Summer House</p>
                         <img src="./sass/assets/2.jpg" 
                              alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                         <p>Summer House</p>
                         <img src="./sass/assets/3.jpg" 
                              alt="summer house">
                 </div>
-                <div class="projectsMenu__projectsList__element">
+                <div class="projectsList__element">
                     <p>Summer House</p>
                     <img src="./sass/assets/4.jpg" 
                          alt="summer house">
@@ -98,8 +98,8 @@
             iste! Similique animi dolor, beatae delectus soluta 
             deleniti incidunt provident cumque fugiat doloremque quas odit Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad cupiditate ratione deserunt ipsa est mollitia laudantium nobis dignissimos iste officiis porro fugit repellat, commodi magni rem numquam minima, quasi exercitationem!
         </p>
-        <div class="aboutSection__aboutList">
-            <div class="aboutSection__aboutList__element">
+        <div class="aboutList">
+            <div class="aboutList__element">
                 <img src="./sass/assets/7.jpg" 
                      alt="Member">
                 <span class="name">
@@ -117,7 +117,7 @@
                     Contact
                 </button>
             </div>
-            <div class="aboutSection__aboutList__element">
+            <div class="aboutList__element">
                 <img src="./sass/assets/8.jpg" 
                      alt="Member">
                 <span class="name">
@@ -135,7 +135,7 @@
                     Contact
                 </button>
             </div>
-            <div class="aboutSection__aboutList__element">
+            <div class="aboutList__element">
                 <img src="./sass/assets/9.jpg" 
                      alt="Member">
                 <span class="name">
@@ -153,7 +153,7 @@
                     Contact
                 </button>
             </div>
-            <div class="aboutSection__aboutList__element">
+            <div class="aboutList__element">
                 <img src="./sass/assets/7.jpg" 
                      alt="Member">
                 <span class="name">
